--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,9 +1,9 @@
 #! /path/to/executable/eggdrop
-# ^- This should contain a fully qualified path to your eggdrop executable.
+# ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.56 2002/05/28 20:15:59 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.57 2002/06/04 05:11:10 wcc Exp $
 #
-# This is a sample eggdrop configuration file which includes all possible
+# This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
 #
 # More detailed descriptions of all these settings can be found in
@@ -49,7 +49,7 @@ set offset "5"
 #set my-hostname "virtual.host.com"
 #set my-ip "99.99.0.0"
 
-# If you want to have your eggdrop messages displayed in a language other
+# If you want to have your Eggdrop messages displayed in a language other
 # than English, change this setting to match your preference. An alternative
 # would be to set the environment variable EGG_LANG to that value.
 #addlang "english"
@@ -128,7 +128,7 @@ set keep-all-logs 0
 # be used _always_.
 set logfile-suffix ".%d%b%Y"
 
-# You can specifiy when eggdrop should switch logfiles and start fresh. You
+# You can specifiy when Eggdrop should switch logfiles and start fresh. You
 # must use military time for this setting. 300 is the default, and describes
 # 03:00 (AM).
 set switch-logfiles-at 300
@@ -153,7 +153,7 @@ set console "mkcobxs"
 # Specify here the filename your userfile should be saved as.
 set userfile "LamestBot.user"
 
-# Specify here the filename eggdrop will save its pid to. If no pidfile is
+# Specify here the filename Eggdrop will save its pid to. If no pidfile is
 # specified, pid.(botnet-nick) will be used.
 #set pidfile "pid.LamestBot"
 
@@ -161,11 +161,11 @@ set userfile "LamestBot.user"
 # This causes the bot to use bit more CPU when saving the usefile.
 set sort-users 0
 
-# Specify here where eggdrop should look for help files. Don't modify this
+# Specify here where Eggdrop should look for help files. Don't modify this
 # setting unless you know what you're doing!
 set help-path "help/"
 
-# Specify here where eggdrop should look for text files. This is used for
+# Specify here where Eggdrop should look for text files. This is used for
 # certain Tcl and DCC commands.
 set text-path "text/"
 
@@ -198,7 +198,7 @@ set userfile-perm 0600
 ##### BOTNET/DCC/TELNET #####
 
 # Settings in this section should be unimportant for you until you deal
-# with botnets (multiple eggdrops connected together to maximize efficiency).
+# with botnets (multiple Eggdrops connected together to maximize efficiency).
 # You should read doc/BOTNET before modifying these settings.
 
 # If you want to use a different nickname on the botnet than you use on
@@ -207,7 +207,7 @@ set userfile-perm 0600
 #set botnet-nick "LlamaBot"
 
 # This opens a telnet port by which you and other bots can
-# interact with the eggdrop by telneting in.
+# interact with the Eggdrop by telneting in.
 #
 # There are more options for the listen command in doc/tcl-commands.doc.
 # Note, if you are running more than one bot on the same machine, you will
@@ -226,14 +226,14 @@ set userfile-perm 0600
 # If you wish to use only one port, use this format:
 listen 3333 all
 
-# This setting defines whether or not people can boot users on the eggdrop
+# This setting defines whether or not people can boot users on the Eggdrop
 # from other bots in your botnet. Valid settings are:
 #   0 - allow *no* outside boots
 #   1 - allow boots from sharebots
 #   2 - allow any boots
 set remote-boots 2
 
-# This setting prohibits remote bots from telling your eggdrop to unlink from
+# This setting prohibits remote bots from telling your Eggdrop to unlink from
 # share bots.
 set share-unlinks 1
 
@@ -261,11 +261,11 @@ set require-p 0
 # setting must be set to 0 to use this.
 set open-telnets 0
 
-# If you don't want eggdrop to identify itself as an eggdrop on a telnet connection,
+# If you don't want Eggdrop to identify itself as an eggdrop on a telnet connection,
 # set this setting to 1. Eggdrop will display 'Nickname' instead.
 set stealth-telnets 0
 
-# If you want eggdrop to display a banner when telneting in, set this setting
+# If you want Eggdrop to display a banner when telneting in, set this setting
 # to 1. The telnet banner is set by 'set telnet-banner'.
 set use-telnet-banner 0
 
@@ -292,7 +292,7 @@ set resolve-timeout 15
 
 ##### MORE ADVANCED SETTINGS #####
 
-# Set this to your socks host if your eggdrop sits behind a firewall.
+# Set this to your socks host if your Eggdrop sits behind a firewall.
 # If you use a Sun "telnet passthru" firewall, use this setting:
 #set firewall "!sun-barr.ebay:3666"
 
@@ -313,8 +313,8 @@ set resolve-timeout 15
 # Set the time in minutes that temporary ignores should last.
 set ignore-time 15
 
-# Define here what eggdrop considers 'hourly'. All calls to it, including such
-# things as note notifying or userfile saving are affected by this. For example:
+# Define here what Eggdrop considers 'hourly'. All calls to it, including such
+# things as note notifying or userfile saving, are affected by this. For example:
 #
 # set hourly-updates 15
 #
@@ -338,12 +338,12 @@ set default-flags "hp"
 # which provides commands for changing all of these.
 set whois-fields "url birthday"
 
-# Enable this setting if you want your eggdrop to die upon receiving a SIGHUP
-# kill signal. Otherwise, the eggdrop will just save its userfile and rehash.
+# Enable this setting if you want your Eggdrop to die upon receiving a SIGHUP
+# kill signal. Otherwise, the Eggdrop will just save its userfile and rehash.
 set die-on-sighup 0
 
-# Enable this setting if you want your eggdrop to die upon receiving a SIGTERM
-# kill signal. Otherwise, the eggdrop will just save its userfile and rehash.
+# Enable this setting if you want your Eggdrop to die upon receiving a SIGTERM
+# kill signal. Otherwise, the Eggdrop will just save its userfile and rehash.
 set die-on-sigterm 1
 
 # Comment these two lines if you wish to enable the .tcl and .set commands.
@@ -371,7 +371,7 @@ set enable-simul 1
 # Enable this setting if you want +d & +k users to use commands bound as -|-.
 set allow-dk-cmds 1
 
-# If your eggdrop rejects bots that actually have already disconnected from
+# If your Eggdrop rejects bots that actually have already disconnected from
 # another hub, but the disconnect information has not yet spread over the
 # botnet due to lag, use this setting. The bot will wait dupwait-timeout
 # seconds before it checks again and then finally reject the bot.
@@ -388,11 +388,11 @@ die "Please make sure you edit your config file completely."
 
 ##### MODULES #####
 
-# Below are various settings for the modules available with eggdrop.
+# Below are various settings for the modules included with Eggdrop.
 # PLEASE READ AND EDIT THEM CAREFULLY, even if you're an old hand at
-# eggdrop, things change.
+# Eggdrop, things change.
 
-# This path specifies the path were eggdrop should look for its modules.
+# This path specifies the path were Eggdrop should look for its modules.
 # If you run the bot from the compilation directory, you will want to set
 # this to "". If you use 'make install' (like all good kiddies do ;), this
 # is a fine default. Otherwise, use your head :)
@@ -823,18 +823,18 @@ set flood-ctcp 3:60
 set never-give-up 1
 
 # Often, IRC servers call themselves a name other than their actual
-# hostname. If you want eggdrop to replace your entry in the config
+# hostname. If you want Eggdrop to replace your entry in the config
 # file with this name, set this to 1. If you set this setting to 0,
-# eggdrop will keep a separate list of what IRC servers call themselves.
+# Eggdrop will keep a separate list of what IRC servers call themselves.
 set strict-servernames 0
 
-# This setting defines how long eggdrop should wait before moving from one
-# server to another on disconnect. If you set 0 here, eggdrop will not wait
+# This setting defines how long Eggdrop should wait before moving from one
+# server to another on disconnect. If you set 0 here, Eggdrop will not wait
 # at all and will connect instantly. Setting this too low could result in
 # your bot being K:Lined.
 set server-cycle-wait 60
 
-# Set here how long eggdrop should wait for a response when connecting to a
+# Set here how long Eggdrop should wait for a response when connecting to a
 # server before giving up and moving on to next server.
 set server-timeout 60
 
@@ -844,8 +844,8 @@ set server-timeout 60
 # any major IRC network, this should probably be turned off.
 set servlimit 0
 
-# Set this to 1 if eggdrop should check for stoned servers? (where the
-# server connection has died, but eggdrop hasn't been notified yet).
+# Set this to 1 if Eggdrop should check for stoned servers? (where the
+# server connection has died, but Eggdrop hasn't been notified yet).
 set check-stoned 1
 
 # This setting allows you the logging of all information received from the
@@ -871,7 +871,7 @@ set serverror-quit 1
 # want to raise this. 300 is fine for most people though.
 set max-queue-msg 300
 
-# If you want eggdrop to trigger binds for ignored users, set this to 1.
+# If you want Eggdrop to trigger binds for ignored users, set this to 1.
 set trigger-on-ignore 0
 
 # Allow identical messages in the mode queue?
@@ -896,7 +896,7 @@ set optimize-kicks 1
 
 ### SERVER MODULE - OTHER NETWORKS (net-type 5) ###
 
-# This settings defines how umode +r is understood by eggdrop. Some
+# This settings defines how umode +r is understood by Eggdrop. Some
 # networks use +r to indicate a restricted connection. If this is your
 # case, and you want your bot to leave restricted servers and jump to
 # the next server on its list, then set it to 1.
@@ -904,7 +904,7 @@ set optimize-kicks 1
 
 # This setting allows you to specify the maximum nick-length supported by
 # your network. The default setting is 9. The maximum supported length by
-# eggdrop is 32.
+# Eggdrop is 32.
 #set nick-len 9
 
 #### CTCP MODULE ####
@@ -1009,12 +1009,12 @@ set bounce-exempts 0
 # Set this to 1 if you want to bounce all server invitations (+I modes).
 set bounce-invites 0
 
-# Set here the maximum number of exempts you want eggdrop to set
+# Set here the maximum number of exempts you want Eggdrop to set
 # on a channel. Eggdrop will not place any more exempts if this
 # limit is reached.
 set max-exempts 20
 
-# Set here the maximum number of invites you want eggdrop  to set
+# Set here the maximum number of invites you want Eggdrop to set
 # on a channel. Eggdrop will not place any more invites if this
 # limit is reached.
 set max-invites 20
@@ -1301,7 +1301,7 @@ loadmodule uptime
 
 # This is a good place to load scripts to use with your bot.
 
-# This line loads script.tcl from the scripts directory inside your eggdrop's
+# This line loads script.tcl from the scripts directory inside your Eggdrop's
 # directory. All scripts should be put there, although you can place them where
 # you like as long as you can supply a fully qualified path to them.
 #
@@ -1310,12 +1310,12 @@ loadmodule uptime
 source scripts/alltools.tcl
 source scripts/action.fix.tcl
 
-# Use this script for Tcl and eggdrop downwards compatibility.
+# Use this script for Tcl and Eggdrop downwards compatibility.
 # NOTE: This can also cause problems with some newer scripts.
 source scripts/compat.tcl
 
 # This script provides many useful informational functions, like setting
 # users' URLs, e-mail address, ICQ numbers, etc. You can modify it to add
-# extra entries
+# extra entries.
 source scripts/userinfo.tcl
 loadhelp userinfo.help
