--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
-# ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
+# ^- Set that to the directory Eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.19 2002/05/28 20:15:59 wcc Exp $
+# $Id: eggdrop.simple.conf,v 1.20 2002/06/04 05:11:10 wcc Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -81,7 +81,7 @@ channel set #lamest -inactive -seen +nodesynch +cycle
 # 5 = Others
 set net-type 0
 
-# Set here the port where the eggdrop should listen for telnet connections.
+# Set here the port where the Eggdrop should listen for telnet connections.
 listen 3333 all
 
 # Un-comment the next line and set the list of owners of the bot.
@@ -129,7 +129,7 @@ die "Please make sure you edit your config file completely."
 
 # This is a good place to load scripts to use with your bot.
 
-# This line loads script.tcl from the scripts directory inside your eggdrop's
+# This line loads script.tcl from the scripts directory inside your Eggdrop's
 # directory. All scripts should be put there, although you can place them where
 # you like as long as you can supply a fully qualified path to them.
 #
@@ -137,6 +137,13 @@ die "Please make sure you edit your config file completely."
 
 source scripts/alltools.tcl
 source scripts/action.fix.tcl
+
+# Use this script for Tcl and Eggdrop downwards compatibility.
+# NOTE: This can also cause problems with some newer scripts.
 source scripts/compat.tcl
+
+# This script provides many useful informational functions, like setting
+# users' URLs, e-mail address, ICQ numbers, etc. You can modify it to add
+# extra entries.
 source scripts/userinfo.tcl
 loadhelp userinfo.help
