Some minor doc updates.. debug stuff found by BarkerJr.

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.58 2002/06/14 03:46:47 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.59 2002/07/10 00:37:35 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -865,7 +865,8 @@ set check-stoned 1
 set use-console-r 0
 
 # This setting allows you the logging of all information sent to the server
-# via console mode 'v'.
+# via console/log mode 'v'. It also allows logging of botnet traffic via
+# console/log mode 't'.
 # NOTE: This is a large security hole, allowing people to see passwords.
 # This is now restricted to +n users only. Please choose your owners with
 # care.
