Halfop-support related doc updates.

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.59 2002/07/10 00:37:35 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.60 2002/07/21 02:39:03 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -474,7 +474,8 @@ set global-chanset {
         -secret         -seen
         +shared         +statuslog
         +userbans       +userexempts
-        +userinvites
+        +userinvites    +protecthalfops
+        +autohalfop
 }
 
 # Add each static channel you want your bot to sit in using this command.
