More halfop doc updates.

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.61 2002/07/21 03:22:49 wcc Exp $
+# $Id: eggdrop.complete.conf,v 1.62 2002/07/25 20:44:55 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -474,7 +474,8 @@ set global-chanset {
         -secret         -seen
         +shared         +statuslog
         +userbans       +userexempts
-        +userinvites
+        +userinvites    -protecthalfops
+        -autohalfop
 }
 
 # Add each static channel you want your bot to sit in using this command.
@@ -597,6 +598,12 @@ channel add #lamest {
 #    protection for the channel.
 #
 
+channel set #lamest +enforcebans +dynamicbans +userbans +dynamicexempts +greet
+channel set #lamest +userexempts +dynamicinvites +userinvites +protectops
+channel set #lamest +protectfriends +statuslog +revenge -protecthalfops +cycle
+channel set #lamest +revengebot +dontkickops +autovoice -autoop -autohalfop
+channel set #lamest -bitch -secret -shared
+
 # There are many different options for channels which you can
 # define. They can be enabled or disabled by a plus or minus
 # in front of them.
@@ -711,29 +718,6 @@ channel add #lamest {
 #    Allow non-ops to perform channel modes? This can stop the bot from
 #    fighting with services such as ChanServ, or from kicking IRCops when
 #    setting channel modes without having ops.
-
-channel set #lamest +enforcebans
-channel set #lamest +dynamicbans
-channel set #lamest +userbans
-channel set #lamest +dynamicexempts
-channel set #lamest +userexempts
-channel set #lamest +dynamicinvites
-channel set #lamest +userinvites
-channel set #lamest +greet
-channel set #lamest +protectops
-channel set #lamest +protectfriends
-channel set #lamest +protecthalfops
-channel set #lamest +statuslog
-channel set #lamest +revenge
-channel set #lamest +revengebot
-channel set #lamest +autovoice
-channel set #lamest +cycle
-channel set #lamest +dontkickops
-channel set #lamest -autoop
-channel set #lamest -autohalfop
-channel set #lamest -bitch
-channel set #lamest -secret
-channel set #lamest -shared
 
 # Here is a shorter example:
 #
