--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory Eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.20 2002/06/04 05:11:10 wcc Exp $
+# $Id: eggdrop.simple.conf,v 1.21 2002/07/25 20:44:55 wcc Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -66,11 +66,11 @@ channel add #lamest {
   stopnethack-mode 0
 }
 
-channel set #lamest +enforcebans +dynamicbans +userbans
-channel set #lamest +dynamicexempts +userexempts +dynamicinvites +userinvites
-channel set #lamest -autoop -bitch +protectops +protectfriends +dontkickops
-channel set #lamest +greet +statuslog +revenge +autovoice -secret -shared
-channel set #lamest -inactive -seen +nodesynch +cycle
+channel set #lamest +enforcebans +dynamicbans +userbans +dynamicexempts +greet
+channel set #lamest +userexempts +dynamicinvites +userinvites +protectops
+channel set #lamest +protectfriends +statuslog +revenge -protecthalfops +cycle
+channel set #lamest +revengebot +dontkickops +autovoice -autoop -autohalfop
+channel set #lamest -bitch -secret -shared
 
 # [0/1/2/3/4/5] What is your network?
 # 0 = EFnet (non +e/+I hybrid)
