--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.51 2002/07/10 00:37:35 wcc Exp $
+# $Id: eggdrop.advanced.conf,v 1.52 2002/07/25 20:44:55 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -399,7 +399,8 @@ set global-chanset {
         -secret         -seen
         +shared         +statuslog
         +userbans       +userexempts
-        +userinvites
+        +userinvites    -protecthalfops
+        -autohalfop
 }
 
 # Add each static channel you want your bot to sit in using this command.
@@ -454,12 +455,12 @@ channel add #lamest {
 #     3 Deop the user, give them the +d flag for the channel, kick, and ban them.
 #
 # aop-delay (minimum:maximum)
-#   This is used for autoop, autohalfop, autovoice. If an op or voice joins a
-#   channel while another op or voice is pending, the bot will attempt to put
-#   both modes on one line.
-#     aop-delay 0   No delay is used.
-#     aop-delay X   An X second delay is used.
-#     aop-delay X:Y A random delay between X and Y is used.
+# This is used for autoop, autohalfop, autovoice. If an op or voice joins a
+# channel while another op or voice is pending, the bot will attempt to put
+# both modes on one line.
+#   aop-delay 0   No delay is used.
+#   aop-delay X   An X second delay is used.
+#   aop-delay X:Y A random delay between X and Y is used.
 #
 # need-op { putserv "PRIVMSG #lamest :op me cos i'm lame!" }
 #    This setting will make the bot run the script enclosed in brackets
@@ -521,6 +522,12 @@ channel add #lamest {
 #    constitutes a flood. Setting this to 0 or 0:0 disables nick flood
 #    protection for the channel.
 #
+
+channel set #lamest +enforcebans +dynamicbans +userbans +dynamicexempts +greet
+channel set #lamest +userexempts +dynamicinvites +userinvites +protectops
+channel set #lamest +protectfriends +statuslog +revenge -protecthalfops +cycle
+channel set #lamest +revengebot +dontkickops +autovoice -autoop -autohalfop
+channel set #lamest -bitch -secret -shared
 
 # There are many different options for channels which you can
 # define. They can be enabled or disabled by a plus or minus
@@ -636,29 +643,6 @@ channel add #lamest {
 #    Allow non-ops to perform channel modes? This can stop the bot from
 #    fighting with services such as ChanServ, or from kicking IRCops when
 #    setting channel modes without having ops.
-
-channel set #lamest +enforcebans
-channel set #lamest +dynamicbans
-channel set #lamest +userbans
-channel set #lamest +dynamicexempts
-channel set #lamest +userexempts
-channel set #lamest +dynamicinvites
-channel set #lamest +userinvites
-channel set #lamest +greet
-channel set #lamest +protectops
-channel set #lamest +protectfriends
-channel set #lamest +protecthalfops
-channel set #lamest +statuslog
-channel set #lamest +revenge
-channel set #lamest +revengebot
-channel set #lamest +autovoice
-channel set #lamest +cycle
-channel set #lamest +dontkickops
-channel set #lamest -autoop
-channel set #lamest -autohalfop
-channel set #lamest -bitch
-channel set #lamest -secret
-channel set #lamest -shared
 
 # Here is a shorter example:
 #
