Made ban-time a channel int.

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.52 2002/07/25 20:44:55 wcc Exp $
+# $Id: eggdrop.advanced.conf,v 1.53 2002/08/02 23:50:37 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -341,26 +341,6 @@ loadmodule channels
 # Enter here the filename where dynamic channel settings are stored.
 set chanfile "LamestBot.chan"
 
-# Set here how long temporary bans will last (in minutes). If you
-# set this setting to 0, the bot will never remove them.
-set ban-time 120
-
-# Set here how long temporary exempts will last (in minutes). If you
-# set this setting to 0, the bot will never remove them. The bot will
-# check the exempts every X minutes, but will not remove the exempt if
-# a ban is set on the channel that matches that exempt. Once the ban is
-# removed, then the exempt will be removed the next time the bot checks.
-# Please note that this is an IRCnet feature.
-set exempt-time 60
-
-# Set here how long temporary invites will last (in minutes). If you
-# set this setting to 0, the bot will never remove them.
-# The bot will check the invites every X minutes, but will not remove
-# the invite if a channel is set to +i. Once the channel is -i then
-# the invite will be removed the next time the bot checks.
-# Please note that this is an IRCnet feature.
-set invite-time 60
-
 # Set this setting to 1 if you want your bot to expire bans/exempts/invites set
 # by other opped bots on the channel.
 set force-expire 0
@@ -386,6 +366,9 @@ set global-idle-kick 0
 set global-chanmode "nt"
 set global-stopnethack-mode 0
 set global-revenge-mode 1
+set global-ban-time 120
+set global-exempt-time 60
+set global-invite-time 60
 
 set global-chanset {
         -autoop         -autovoice
@@ -412,6 +395,9 @@ channel add #lamest {
   idle-kick 0
   stopnethack-mode 0
   revenge-mode 1
+  ban-time 120
+  exempt-time 60
+  invite-time 60
   aop-delay 5:30
   need-op { putserv "PRIVMSG #lamest :op me cos i'm lame!" }
   need-invite { putserv "PRIVMSG #lamest :let me in!" }
@@ -453,6 +439,26 @@ channel add #lamest {
 #     1 Deop the user and give them the +d flag for the channel.
 #     2 Deop the user, give them the +d flag for the channel, and kick them.
 #     3 Deop the user, give them the +d flag for the channel, kick, and ban them.
+#
+# ban-time 120
+#   Set here how long temporary bans will last (in minutes). If you
+#   set this setting to 0, the bot will never remove them.
+#
+# exempt-time 60
+#   Set here how long temporary exempts will last (in minutes). If you
+#   set this setting to 0, the bot will never remove them. The bot will
+#   check the exempts every X minutes, but will not remove the exempt if
+#   a ban is set on the channel that matches that exempt. Once the ban is
+#   removed, then the exempt will be removed the next time the bot checks.
+#   Please note that this is an IRCnet feature.
+#
+# invite-time 60
+#   Set here how long temporary invites will last (in minutes). If you
+#   set this setting to 0, the bot will never remove them. The bot will
+#   check the invites every X minutes, but will not remove the invite if
+#   a channel is set to +i. Once the channel is -i then the invite will be
+#   removed the next time the bot checks. Please note that this is an IRCnet
+#   feature.
 #
 # aop-delay (minimum:maximum)
 # This is used for autoop, autohalfop, autovoice. If an op or voice joins a
