--- a/configure.in
+++ b/configure.in
@@ -121,6 +121,8 @@ EGG_TCL_LUSH
 # ---------- end of (what used to be) robey's Tcl thingies
 
 EGG_FUNC_DLOPEN
+EGG_FIX_TCL_RPATH
+EGG_CHECK_TCLVERSION_MATCHES
 
 EGG_SUBST_EGGVERSION
 EGG_SUBST_DEST
