* Added some simple optimizations to user lookups. Only in effect for hand2nick and chattr for now. * Added some basic sanity checks to eggdrop.simple.conf (credit for ideas to slennox)

--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory Eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.21 2002/07/25 20:44:55 wcc Exp $
+# $Id: eggdrop.simple.conf,v 1.22 2002/09/27 19:30:02 stdarg Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -147,3 +147,19 @@ source scripts/compat.tcl
 # extra entries.
 source scripts/userinfo.tcl
 loadhelp userinfo.help
+
+#
+# Don't edit below here unless you know what you are doing!
+#
+
+if {[info exists env(USER)]} {
+	if {$username == "eggdrop"} { set username $env(USER) }
+}
+
+if {[lsearch -exact [channels] "#lamest"] != -1} {
+	putlog "***"
+	putlog "*** Are you sure you want to be on channel #lamest?"
+	putlog "***"
+	putlog "*** If not, remove 'channel add #lamest' and all of the 'channel set #lamest' examples from the config file."
+	putlog "***"
+}
