--- a/eggdrop.conf
+++ b/eggdrop.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.complete.conf,v 1.63 2002/08/02 23:50:37 wcc Exp $
+# $Id: eggdrop.conf,v 1.1 2002/09/27 22:16:24 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -461,32 +461,32 @@ set global-chanset {
         -autohalfop
 }
 
-# Add each static channel you want your bot to sit in using this command.
-# There are many different possible settings you can insert into this
-# command, which are explained below.
-
-channel add #lamest {
-  chanmode "+nt-likm"
-  idle-kick 0
-  stopnethack-mode 0
-  revenge-mode 1
-  ban-time 120
-  exempt-time 60
-  invite-time 60
-  aop-delay 5:30
-  need-op { putserv "PRIVMSG #lamest :op me cos i'm lame!" }
-  need-invite { putserv "PRIVMSG #lamest :let me in!" }
-  need-key { putserv "PRIVMSG #lamest :let me in!" }
-  need-unban { putserv "PRIVMSG #lamest :let me in!" }
-  need-limit { putserv "PRIVMSG #lamest :let me in!" }
-  flood-chan 10:60
-  flood-deop 3:10
-  flood-kick 3:10
-  flood-join 5:60
-  flood-ctcp 3:60
-  flood-nick 5:60
-}
-
+# Add each static channel you want your bot to sit in using the following
+# command. There are many different possible settings you can insert into
+# this command, which are explained below.
+#
+#    channel add #lamest {
+#      chanmode "+nt-likm"
+#      idle-kick 0
+#      stopnethack-mode 0
+#      revenge-mode 1
+#      ban-time 120
+#      exempt-time 60
+#      invite-time 60
+#      aop-delay 5:30
+#      need-op { putserv "PRIVMSG #lamest :op me cos i'm lame!" }
+#      need-invite { putserv "PRIVMSG #lamest :let me in!" }
+#      need-key { putserv "PRIVMSG #lamest :let me in!" }
+#      need-unban { putserv "PRIVMSG #lamest :let me in!" }
+#      need-limit { putserv "PRIVMSG #lamest :let me in!" }
+#      flood-chan 10:60
+#      flood-deop 3:10
+#      flood-kick 3:10
+#      flood-join 5:60
+#      flood-ctcp 3:60
+#      flood-nick 5:60
+#    }
+#
 # chanmode +/-<modes>
 #    This setting makes the bot enforce channel modes. It will always add
 #    the +<modes> and remove the -<modes> modes.
@@ -603,16 +603,15 @@ channel add #lamest {
 #    constitutes a flood. Setting this to 0 or 0:0 disables nick flood
 #    protection for the channel.
 #
-
-channel set #lamest +enforcebans +dynamicbans +userbans +dynamicexempts +greet
-channel set #lamest +userexempts +dynamicinvites +userinvites +protectops
-channel set #lamest +protectfriends +statuslog +revenge -protecthalfops +cycle
-channel set #lamest +revengebot +dontkickops +autovoice -autoop -autohalfop
-channel set #lamest -bitch -secret -shared
-
 # There are many different options for channels which you can
-# define. They can be enabled or disabled by a plus or minus
-# in front of them.
+# define. They can be enabled or disabled using the channel set command by a
+# plus or minus in front of them.
+#
+#   channel set #lamest +enforcebans +dynamicbans +userbans +dynamicexempts
+#   channel set #lamest +userexempts +dynamicinvites +userinvites +protectops
+#   channel set #lamest +protectfriends +statuslog +revenge -protecthalfops
+#   channel set #lamest +revengebot +dontkickops +autovoice -autoop -autohalfop
+#   channel set #lamest -bitch -secret -shared +greet +cycle
 #
 # A complete list of all available channel settings:
 #
@@ -724,14 +723,14 @@ channel set #lamest -bitch -secret -shared
 #    Allow non-ops to perform channel modes? This can stop the bot from
 #    fighting with services such as ChanServ, or from kicking IRCops when
 #    setting channel modes without having ops.
-
+#
 # Here is a shorter example:
 #
-#  channel add #botcentral {
-#    chanmode "+mntisl 1"
-#    idle-kick 1
-#  }
-#  channel set #botcentral +bitch +enforcebans -greet +revenge
+#   channel add #botcentral {
+#     chanmode "+mntisl 1"
+#     idle-kick 1
+#   }
+#   channel set #botcentral +bitch +enforcebans -greet +revenge
 
 
 #### SERVER MODULE ####
