Made the modes-per-line limit definable in src/chan.h. Patch by Eule.

--- a/eggdrop.conf
+++ b/eggdrop.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.conf,v 1.1 2002/09/27 22:16:24 wcc Exp $
+# $Id: eggdrop.conf,v 1.2 2002/10/08 04:25:36 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -1047,6 +1047,9 @@ set prevent-mixing 1
 # Some networks allow you to stack lots of channel modes into one line.
 # They're all guaranteed to support at least 3, so that's the default.
 # If you know your network supports more, you may want to adjust this.
+# This setting is limited to 6, although if you want to use a higher value,
+# you can modify this by changing the value of MODES_PER_LINE_MAX in
+# src/chan.h and recompiling the bot.
 #set modes-per-line 3
 
 # Some networks don't include the +l limit and +k or -k key modes
